# QtMediaPlayer

./: CMakeLists.txt  CMakeLists.txt.bak  main.cpp  mainwindow.cpp
